--- a/VChuang/AndroidManifest.xml
+++ b/VChuang/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="23" />
 
     <application
+        android:name="com.zlw.mymodel.base.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +19,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
