--- a/VChuang/AndroidManifest.xml
+++ b/VChuang/AndroidManifest.xml
@@ -23,8 +23,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ProjectActivity"
+            android:name="com.jyy.ProjectActivity"
             android:label="@string/title_activity_project" >
+        </activity>
+        <activity
+            android:name="com.jyy.InvestorActivity"
+            android:label="@string/title_activity_investor" >
         </activity>
     </application>
 
