--- a/VChuang/.classpath
+++ b/VChuang/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/volley.jar"/>
+	<classpathentry kind="lib" path="libs/library-1.0.19.jar"/>
+	<classpathentry kind="lib" path="libs/glide-3.7.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
