--- a/VChuang/AndroidManifest.xml
+++ b/VChuang/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="23" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name="com.zlw.mymodel.base.MyApplication"
