--- a/VChuang/.classpath
+++ b/VChuang/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/library-1.0.19.jar"/>
 	<classpathentry kind="lib" path="libs/glide-3.7.0.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
