--- a/VChuang/AndroidManifest.xml
+++ b/VChuang/AndroidManifest.xml
@@ -13,17 +13,18 @@
     <application
         android:name="com.zlw.mymodel.base.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+        
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.jyy.ProjectActivity"
@@ -52,6 +53,64 @@
         <activity
             android:name="com.wzy.TeamActivity"
             android:label="@string/title_activity_team" >
+        </activity>
+        
+        <activity
+            android:name="com.xj.LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name="com.xj.SplashActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.xj.RegistActivity"
+            android:label="@string/title_activity_regist" >
+        </activity>
+        <activity
+            android:name=".TestActivity"
+            android:label="@string/title_activity_test" >
+        </activity>
+        <activity
+            android:name=".FriendsActivity"
+            android:label="@string/title_activity_friends" >
+        </activity>
+        <activity
+            android:name="com.xj.FriendActivity"
+            android:label="@string/title_activity_friend" >
+        </activity>
+        <activity
+            android:name=".StretchViewActivity"
+            android:label="@string/title_activity_stretch_view" >
+        </activity>
+        <activity
+            android:name="com.xj.OperationActivity"
+            android:label="@string/title_activity_operation" >
+        </activity>
+        <activity
+            android:name=".OperationActivity"
+            android:label="@string/title_activity_operation" >
+        </activity>
+        <activity
+            android:name="com.xj.SettingActivity"
+            android:label="@string/title_activity_setting" >
+        </activity>
+        <activity
+            android:name="com.xj.BianjiActivity"
+            android:label="@string/title_activity_bianji" >
+        </activity>
+        <activity
+            android:name="com.xj.MymsgActivity"
+            android:label="@string/title_activity_mymsg" >
+        </activity>
+        <activity
+            android:name="com.xj.ShouCangActivity"
+            android:label="@string/title_activity_shou_cang" >
         </activity>
         <!-- MOB-SDK -->
 
